--- a/client/package.json
+++ b/client/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "react-router",
+  "name": "chatroom",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.1",
+    "cors": "^2.8.5",
+    "firebase": "^9.9.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-hot-toast": "^2.4.0",
-    "react-query": "^3.39.2",
+    "react-hot-toast": "^2.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-uuid": "^1.0.2",
+    "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
