--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "Follow Up API",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "start": "nodemon index"
   },
   "keywords": [],
-  "author": "",
+  "author": "Imran",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
